--- a/requirements.txt
+++ b/requirements.txt
@@ -35,7 +35,7 @@ lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
 Pillow==10.1.0
-# psycopg2==2.9.5
+psycopg2==2.9.5
 pycodestyle==2.6.0
 PyJWT==1.7.1
 pylint==2.6.0
